fix: wrong color for "danger" labels

--- a/frontend/src/components/Popups/PopupForms/Team/PopupDeleteTeam/PopupDeleteTeam.scss
+++ b/frontend/src/components/Popups/PopupForms/Team/PopupDeleteTeam/PopupDeleteTeam.scss
@@ -3,7 +3,5 @@
     margin-bottom: 32px;
   }
 
-  .danger-color {
-    color: $warningColor;
-  }
+  
 }
